<resources>
    <string name="app_name">Contapassi</string>
    <string name="name">action_settings</string>
    <string name="Bienvenue">Benvenuto</string>
    <string name="sum">Treulla Steps è una rivoluzionaria applicazione Sardo-Marocchina per il
    monitoraggio della tua attività sportiva.
    Allaccia le scarpe e preparati a tornare in
    forma o a migliorare le tue prestazioni sportive,
    Treulla Steps è il miglior compagno qualunque siano le tue esigenze.</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Benvenuti</string>
    <string name="title_activity_second">Benvenuti</string>
    <string name="title_activity_third">Benvenuti</string>
    <string name="image_content_description">Un Android avec un chien</string>
    <string name="create_account">Créer un compte</string>
    <string name="email">Adresse email</string>
    <string name="password">Mot de passe</string>
    <string name="connect">Se connecter</string>
    <string name="title_activity_login_display">LoginDisplayActivity</string>
    <string name="hint_mail">"mail"</string>
    <string name="hint_pass">"Ici : Le mot de passe de l'utilisateur"</string>
    <string name="email_format_error">"Le champs email ne correspond pas au format d'une adresse mail"</string>
    <string name="email_or_password_empty">"L'adresse email et mot de passe sont obligatoires"</string>
<<<<<<< HEAD

    <!-- nomi dei singoli valori di un'attività -->
    <!--stringhe da sistemare, se metto le lettere accentate non funziona la
    scrittura/lettura del file JSON perchè uso le stringhe come valore-->
    <string name="title_training">Training</string>
    <string name="name_training">Nome</string>
    <string name="distance">Distanza</string>
    <string name="speed_avg_total">Velocita media complessiva</string>
    <string name="speed_avg_meters">Velocita media sugli ultimi X metri</string>
    <string name="rhythm_avg_total">Ritmo medio</string>
    <string name="rhythm_avg_meters">Ritmo medio sugli ultimi X metri</string>

    <string name="title_activity_database_test">DatabaseTest</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_fourth">Fourth</string>
    <string name="title_activity_inter">inter</string>

=======
<<<<<<< HEAD
    <string name="title_activity_database_test">DatabaseTest</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_fourth">Fourth</string>
    <string name="title_activity_inter">inter</string>
=======

    <!-- nomi dei singoli valori di un'attività -->
    <!--stringhe da sistemare, se metto le lettere accentate non funziona la
    scrittura/lettura del file JSON perchè uso le stringhe come valore-->
    <string name="title_training">Training</string>
    <string name="name_training">Nome</string>
    <string name="distance">Distanza</string>
    <string name="speed_avg_total">Velocita media complessiva</string>
    <string name="speed_avg_meters">Velocita media sugli ultimi X metri</string>
    <string name="rhythm_avg_total">Ritmo medio</string>
    <string name="rhythm_avg_meters">Ritmo medio sugli ultimi X metri</string>

    <string name="title_activity_database_test">DatabaseTest</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_fourth">Fourth</string>
    <string name="title_activity_inter">inter</string>

>>>>>>> origin/master
>>>>>>> origin/master
</resources>