<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Questi sono i dati registrati:" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TextViewNameTraining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TextViewDistanceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance" />

        <TextView
            android:id="@+id/TextViewDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TextViewSpeedAverageTotalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed_avg_total" />

        <TextView
            android:id="@+id/TextViewSpeedAverageTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TextViewSpeedAverageMetersTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed_avg_meters" />

        <TextView
            android:id="@+id/TextViewSpeedAverageMeters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TextViewRhythmAverageTotalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rhythm_avg_total" />

        <TextView
            android:id="@+id/TextViewRhythmAverageTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TextViewRhythmAverageMetersTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rhythm_avg_meters" />

        <TextView
            android:id="@+id/TextViewRhythmAverageMeters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/EditTextEmailAddress"
            android:layout_width="300px"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/bntSendEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Invia" />

</LinearLayout>